created a simple frame that displays, can be resized, and can be closed (and will do the right thing when it is closed)

--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
         description="Packages the compiled byte code into a java archive.">
         <jar basedir="${build}" destfile="${hellojar}">
             <manifest>
-                <attribute name="Main-Class" value="io.github.cyberpost500.helloworld.HelloWorld"/>
+                <attribute name="Main-Class" value="io.github.cyberpost500.hungryshapes.MainWindow"/>
             </manifest>
         </jar>
     </target>
